fix barney code and expand/collapse all

--- a/static/css/swagger-dark.css
+++ b/static/css/swagger-dark.css
@@ -2002,6 +2002,10 @@ select:-webkit-autofill {
     background-color: rgba(0, 0, 0, 0.05);
     color: rgb(154, 38, 254);
 }
+#relearn-swagger-ui .renderedMarkdown code {
+  font-size: 12px;
+  color: rgb(224, 226, 228);
+}
 body {
     background-image: initial;
     background-color-relearn: var(--INTERNAL-MAIN-BG-color);
